# transbeta

./: .gitignore  README.md  betacode_coptic.cxx  betacode_greek.cxx  betacode_hebrew.cxx  cjhebrew.cxx  cjhebrew.inc  code_tables.cxx  code_tables.h  coptic.inc  globals.h  greek_asterisk.inc  greek_case.inc  greek_precombined_asterisk.inc  greek_precombined_case.inc  hebrew.inc  pyproject.toml  setup.py  specials.inc  tbl2cpp.py  tbl2cpp_all.sh  transbetamodule.cxx  transliterate.h  transliteratemodule.cxx  trie.h
tests/: crash.py  minitest.py  out.html  test.py
