[project]
name="transbeta"
version="0.2"
authors = [
  { name="Diedrich Vorberg", email="diedrich@tux4web.de" },
]
description="Python module written in C++ to convert transliterated representation of ancient languages to unicode (TLG's beta code and LaTeX cjhebrew markup)"
readme="README.md"

classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux"
]

dependencies = []

[tool.setuptools.packages.find]
include = ["transbeta"]  # ["*"] by default

[project.urls]
"Homepage" = "https://github.com/dvorberg/transbeta"

[build-system]
requires = ["setuptools>=65.0",]
build-backend = "setuptools.build_meta"
